--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -7,14 +7,15 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- Your analysis here\n",
-    "  \n",
+    "- The following report analyzes school performace and gives key metrics based on reading and math scores across several schools, grades, and school types across the district. \n",
+    "\n",
+    "- Charter schools outperform district schools across all metrics, with the top five highest-performing schools and the lowest-spending schools being charter schools. Both the smallest and largest charter schools exceed the district average in student passing rates, while the largest district schools fall below the average. Overall, district schools struggle, particularly those with the highest spending per student.\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,12 +178,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## District Summary"
+    "## District Summary\n",
+    "\n",
+    "The district has the following:\n",
+    "\n",
+    "- Total number of unique schools: 15\n",
+    "- Total number of students: 39,170\n",
+    "- Total budget: $82,932,329,558.00\n",
+    "- Average Math Score: 79\n",
+    "- Average Reading Score: 82\n",
+    "- % Passing Math: 75%\n",
+    "- % Passing Reading: 85.8%\n",
+    "- % Overall Passing: 65.2%\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +204,7 @@
        "15"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +226,7 @@
        "'39,170'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +260,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +281,7 @@
        "'$82,932,329,558.00'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +304,7 @@
        "'79'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +327,7 @@
        "'82'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +350,7 @@
        "'75.0%'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +374,7 @@
        "'85.8%'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +398,7 @@
        "'65.2%'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +473,7 @@
        "0                    82          75.0%             85.8%             65.2%  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,12 +495,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## School Summary"
+    "## School Summary\n",
+    "\n",
+    "- This section give an analysis of the breakdown of each school showing the type of school, total students, total school budget, per student budget, average math score, average reading score, % passing math, % passing reading, and overall % passing. \n",
+    "\n",
+    "- The school with the largest budget per students, Hernandez High School, has 66% students passing math, which is below the distric percentage of 75%. Hernandez High School also has 80% passing reading which is below the district of 85.8%. A deeper look into where the money is being spent would be necessary to understand why they are below the district average but have the largest budget. \n",
+    "\n",
+    "- Wilson High School has the smalles budget per student for the district and exceeds the districts average in math and reading at 93.8% and 96.5%, repectively. A deeper look into factors that could be contributing to this such as class size, partent involvement, teacher retention, and location of school, could help to better understand the scores. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -499,10 +518,20 @@
        "Shelton High School       Charter\n",
        "Hernandez High School    District\n",
        "Griffin High School       Charter\n",
+       "Wilson High School        Charter\n",
+       "Cabrera High School       Charter\n",
+       "Bailey High School       District\n",
+       "Holden High School        Charter\n",
+       "Pena High School          Charter\n",
+       "Wright High School        Charter\n",
+       "Rodriguez High School    District\n",
+       "Johnson High School      District\n",
+       "Ford High School         District\n",
+       "Thomas High School        Charter\n",
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,12 +539,12 @@
    "source": [
     "# Use the code provided to select the type per school from school_data\n",
     "school_types = school_data.set_index([\"school_name\"])[\"type\"]\n",
-    "school_types.head()\n"
+    "school_types\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +569,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +613,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,39 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Student ID       False\n",
-       "student_name     False\n",
-       "gender           False\n",
-       "grade            False\n",
-       "school_name      False\n",
-       "reading_score    False\n",
-       "math_score       False\n",
-       "School ID        False\n",
-       "type             False\n",
-       "size             False\n",
-       "budget           False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "null_values = school_data_complete.isnull().any()\n",
-    "null_values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +649,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,8 +812,7 @@
     "students_passing_math = school_data_complete[(school_data_complete[\"math_score\"] >= 70)]\n",
     "school_students_passing_math = students_passing_math.groupby([\"school_name\"]).size()\n",
     "school_students_passing_math\n",
-    "\n",
-    "# school_data_complete[(school_data_complete[\"math_score\"] >= 70)].count()[\"student_name\"]\n"
+    "\n"
    ]
   },
   {
@@ -1240,7 +1236,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Highest-Performing Schools (by % Overall Passing)"
+    "## Highest-Performing Schools (by % Overall Passing)\n",
+    "\n",
+    "The top five highest performing schools in the district are all charter schools. "
    ]
   },
   {
@@ -1408,7 +1406,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bottom Performing Schools (By % Overall Passing)"
+    "## Bottom Performing Schools (By % Overall Passing)\n",
+    "\n",
+    "The lowest five performing schools in the district are all district schools. "
    ]
   },
   {
@@ -1574,7 +1574,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Math Scores by Grade"
+    "## Math Scores by Grade\n",
+    "\n",
+    "It can be observed that generally the math test scores by grade do not change significantly as the students progress through the school. "
    ]
   },
   {
@@ -1770,7 +1772,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading Score by Grade "
+    "## Reading Score by Grade \n",
+    "\n",
+    "It can also be observed that generally the reading test scores by grade do not change significantly as the students progress through the school. "
    ]
   },
   {
@@ -1967,7 +1971,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scores by School Spending"
+    "## Scores by School Spending\n",
+    "\n",
+    "- The data below shows that schools with spending of less than $585 per student outpeform the districts average in math, reading, and overall. This could be due to the fact they are all charter schools with a lower student body population. It also shows that schools with the highest spending of $645-680 fall well below the districts average. It is worth noting that the schools that spend less per student are charter schools, and the schools that spend the most are district schools. However, additional information would bee needed to understand why the schools with the largest budgets have the grades below the district average. "
    ]
   },
   {
@@ -2487,7 +2493,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scores by School Size"
+    "## Scores by School Size\n",
+    "\n",
+    "The two smallest schools with less than 1,000 students have some of the highest percent of students passing, well above the districts average. It's also worth noting that the two smalles schools are charter schools. The largest charter schools, 2000 to 5000 students, are also are above the districts average of percent of students who are overall passing. However, the largest district schools are below the districts average of percent of students passing overall. "
    ]
   },
   {
@@ -2976,7 +2984,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scores by School Type"
+    "## Scores by School Type\n",
+    "\n",
+    "It can be observed that charter schools outperform district schools in math, reading, and overall passing. "
    ]
   },
   {
